--- a/CubeTest/CubeTest.vcxproj
+++ b/CubeTest/CubeTest.vcxproj
@@ -84,19 +84,23 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="application.h" />
+    <ClInclude Include="geometry.h" />
     <ClInclude Include="node.h" />
     <ClInclude Include="rootnode.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="windownode.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="application.cpp" />
     <ClCompile Include="CubeTest.cpp" />
+    <ClCompile Include="geometry.cpp" />
     <ClCompile Include="node.cpp" />
     <ClCompile Include="rootnode.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="windownode.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\base\base.vcxproj">
