display some rect

--- a/CubeTest/CubeTest.vcxproj
+++ b/CubeTest/CubeTest.vcxproj
@@ -84,23 +84,31 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="application.h" />
+    <ClInclude Include="cubenode.h" />
     <ClInclude Include="geometry.h" />
     <ClInclude Include="node.h" />
+    <ClInclude Include="paintnode.h" />
+    <ClInclude Include="paintstruct.h" />
     <ClInclude Include="rootnode.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="windownode.h" />
+    <ClInclude Include="xmlconstructer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="application.cpp" />
+    <ClCompile Include="cubenode.cpp" />
     <ClCompile Include="CubeTest.cpp" />
     <ClCompile Include="geometry.cpp" />
     <ClCompile Include="node.cpp" />
+    <ClCompile Include="paintnode.cpp" />
+    <ClCompile Include="paintstruct.cpp" />
     <ClCompile Include="rootnode.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="windownode.cpp" />
+    <ClCompile Include="xmlconstructer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\base\base.vcxproj">
