--- a/CubeTest/CubeTest.vcxproj
+++ b/CubeTest/CubeTest.vcxproj
@@ -85,12 +85,17 @@
   <ItemGroup>
     <ClInclude Include="application.h" />
     <ClInclude Include="cubenode.h" />
+    <ClInclude Include="fontfactory.h" />
     <ClInclude Include="geometry.h" />
+    <ClInclude Include="message.h" />
     <ClInclude Include="node.h" />
     <ClInclude Include="paintnode.h" />
     <ClInclude Include="paintstruct.h" />
+    <ClInclude Include="brushfactory.h" />
+    <ClInclude Include="renderengine.h" />
     <ClInclude Include="rootnode.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="StrokeStyle.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="windownode.h" />
     <ClInclude Include="xmlconstructer.h" />
@@ -99,14 +104,18 @@
     <ClCompile Include="application.cpp" />
     <ClCompile Include="cubenode.cpp" />
     <ClCompile Include="CubeTest.cpp" />
+    <ClCompile Include="fontfactroy.cpp" />
     <ClCompile Include="geometry.cpp" />
     <ClCompile Include="node.cpp" />
     <ClCompile Include="paintnode.cpp" />
     <ClCompile Include="paintstruct.cpp" />
+    <ClCompile Include="brushfactory.cpp" />
+    <ClCompile Include="renderengine.cpp" />
     <ClCompile Include="rootnode.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="strokestyle.cpp" />
     <ClCompile Include="windownode.cpp" />
     <ClCompile Include="xmlconstructer.cpp" />
   </ItemGroup>
