--- a/CubeTest/CubeTest.vcxproj
+++ b/CubeTest/CubeTest.vcxproj
@@ -84,15 +84,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="application.h" />
+    <ClInclude Include="css_const.h" />
+    <ClInclude Include="css_declaration.h" />
+    <ClInclude Include="css_keyword.h" />
     <ClInclude Include="css_lexter.h" />
     <ClInclude Include="css_parser.h" />
     <ClInclude Include="css_property.h" />
-    <ClInclude Include="css_property_names.h" />
     <ClInclude Include="css_property_set.h" />
     <ClInclude Include="css_rule.h" />
     <ClInclude Include="css_selector.h" />
     <ClInclude Include="css_selector_list.h" />
     <ClInclude Include="css_stylesheet.h" />
+    <ClInclude Include="css_style_consts.h" />
     <ClInclude Include="css_value.h" />
     <ClInclude Include="cubenode.h" />
     <ClInclude Include="fontfactory.h" />
@@ -114,8 +117,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="application.cpp" />
+    <ClCompile Include="css_declaration.cpp" />
     <ClCompile Include="css_lexter.cpp" />
     <ClCompile Include="css_parser.cpp" />
+    <ClCompile Include="css_property.cpp" />
+    <ClCompile Include="css_property_const.cpp" />
     <ClCompile Include="css_property_names.cpp" />
     <ClCompile Include="css_rule.cpp" />
     <ClCompile Include="css_selector_list.cpp" />
