--- a/CubeTest/CubeTest.vcxproj
+++ b/CubeTest/CubeTest.vcxproj
@@ -87,15 +87,18 @@
     <ClInclude Include="css_const.h" />
     <ClInclude Include="css_declaration.h" />
     <ClInclude Include="css_keyword.h" />
-    <ClInclude Include="css_lexter.h" />
+    <ClInclude Include="css_keyword_define.h" />
     <ClInclude Include="css_parser.h" />
     <ClInclude Include="css_property.h" />
-    <ClInclude Include="css_property_set.h" />
+    <ClInclude Include="css_property_define.h" />
     <ClInclude Include="css_rule.h" />
+    <ClInclude Include="css_scanner.h" />
     <ClInclude Include="css_selector.h" />
     <ClInclude Include="css_selector_list.h" />
     <ClInclude Include="css_stylesheet.h" />
     <ClInclude Include="css_style_consts.h" />
+    <ClInclude Include="css_style_struct.h" />
+    <ClInclude Include="css_style_struct_define.h" />
     <ClInclude Include="css_value.h" />
     <ClInclude Include="cubenode.h" />
     <ClInclude Include="fontfactory.h" />
@@ -118,12 +121,15 @@
   <ItemGroup>
     <ClCompile Include="application.cpp" />
     <ClCompile Include="css_declaration.cpp" />
-    <ClCompile Include="css_lexter.cpp" />
+    <ClCompile Include="css_keyword.cpp">
+      <PreprocessToFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</PreprocessToFile>
+      <PreprocessSuppressLineNumbers Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</PreprocessSuppressLineNumbers>
+    </ClCompile>
     <ClCompile Include="css_parser.cpp" />
     <ClCompile Include="css_property.cpp" />
     <ClCompile Include="css_property_const.cpp" />
-    <ClCompile Include="css_property_names.cpp" />
     <ClCompile Include="css_rule.cpp" />
+    <ClCompile Include="css_scanner.cpp" />
     <ClCompile Include="css_selector_list.cpp" />
     <ClCompile Include="css_stylesheet.cpp" />
     <ClCompile Include="css_value.cpp" />
